MODUSERS-493 - Changes for the POST /staginguser API

--- a/ramls/examples/staging_user.sample
+++ b/ramls/examples/staging_user.sample
@@ -1,6 +1,7 @@
 {
     "isEmailVerified": false,
     "status": "TIER-1",
+    "externalSystemId": "9eb67301-6f6e-468f-9b1a-6134dc39a684",
     "generalInfo": {
         "firstName": "test1",
         "middleName": "www",
