--- a/ramls/examples/staging_user_collection.sample
+++ b/ramls/examples/staging_user_collection.sample
@@ -4,6 +4,7 @@
             "id": "362399c3-dad4-49c5-880a-a65823312065",
             "isEmailVerified": false,
             "status": "TIER-1",
+            "externalSystemId": "9eb67301-6f6e-468f-9b1a-6134dc39a684",
             "generalInfo": {
                 "firstName": "test1",
                 "preferredFirstName": "New Record",
