--- a/pom.xml
+++ b/pom.xml
@@ -590,7 +590,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <raml-module-builder.version>35.4.0-SNAPSHOT</raml-module-builder.version>
+    <raml-module-builder.version>35.4.0</raml-module-builder.version>
     <vertx.version>4.5.11</vertx.version>
     <generate_routing_context>/users</generate_routing_context>
     <junit.version>5.10.0</junit.version>
