--- a/pom.xml
+++ b/pom.xml
@@ -594,7 +594,7 @@
     <vertx.version>4.5.13</vertx.version>
     <generate_routing_context>/users</generate_routing_context>
     <junit.version>5.10.0</junit.version>
-    <folio-service-tools.version>5.0.0-SNAPSHOT</folio-service-tools.version>
+    <folio-service-tools.version>5.0.0</folio-service-tools.version>
     <folio-custom-fields.version>2.2.0</folio-custom-fields.version>
     <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
     <java.version>21</java.version>
