--- a/pom.xml
+++ b/pom.xml
@@ -537,6 +537,7 @@
               io.vertx.core.logging.Log4j2LogDelegateFactory
             </vertx.logger-delegate-factory-class-name>
           </systemPropertyVariables>
+          <groups>unit</groups>
         </configuration>
       </plugin>
 
