--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,13 @@
     <raml-module-builder.version>36.0.0-SNAPSHOT</raml-module-builder.version>
 
     <!-- Test Dependency Versions -->
-    <junit.version>6.0.1</junit.version>
     <hamcrest.version>3.0</hamcrest.version>
     <awaitility.version>4.3.0</awaitility.version>
-    <mockito-core.version>5.21.0</mockito-core.version>
     <okapi-testing.version>7.1.0-SNAPSHOT</okapi-testing.version>
     <rest-assured.version>6.0.0</rest-assured.version>
+    <junit-bom.version>6.0.1</junit-bom.version>
+    <mockito-bom.version>5.21.0</mockito-bom.version>
+    <testcontainers-bom.version>1.20.2</testcontainers-bom.version>
 
     <!-- Plugin Versions -->
     <maven-release-plugin.version>3.3.1</maven-release-plugin.version>
@@ -89,14 +90,21 @@
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
-        <version>${junit.version}</version>
+        <version>${junit-bom.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-bom</artifactId>
+        <version>${mockito-bom.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>org.testcontainers</groupId>
         <artifactId>testcontainers-bom</artifactId>
-        <version>1.20.2</version>
+        <version>${testcontainers-bom.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -249,7 +257,11 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>${mockito-core.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -510,7 +522,6 @@
             </goals>
             <configuration>
               <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
                     <Main-Class>org.folio.rest.RestLauncher</Main-Class>
@@ -518,6 +529,7 @@
                     <Multi-Release>true</Multi-Release>
                   </manifestEntries>
                 </transformer>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
               </transformers>
               <artifactSet />
               <outputFile>${project.build.directory}/${project.artifactId}-fat.jar</outputFile>
